# Healthy_habits_tracker

./: .env.sample  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  fixtures.json  manage.py  pyproject.toml
myprogect/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
myproject/: settings.py  urls.py
tracker/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
tracker/migrations/: 0001_initial.py  0002_alter_habit_owner.py  0003_alter_habit_duration.py  0004_alter_habit_action_alter_habit_periodicity.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_telegram_chat_id.py
