[tool.poetry]
name = "atomic habits"
version = "0.1.0"
description = ""
authors = ["andrey-trasov <159887936+andrey-trasov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.4.0"
celery = "^5.4.0"
redis = "^5.0.8"
django-celery-beat = "^2.7.0"
python-dotenv = "^1.0.1"
black = "^24.8.0"
setuptools = "^75.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
